🐞 Fix project image overflow

--- a/src/pages/ProjectsPage/IndividualProject/IndividualProject.scss
+++ b/src/pages/ProjectsPage/IndividualProject/IndividualProject.scss
@@ -11,17 +11,10 @@
         }
 
         .image-container {
-            position: relative;
             overflow: hidden;
             width: 100%;
-            padding-top: 56.25%;
 
             .project-image {
-                position: absolute;
-                top: 0;
-                left: 0;
-                bottom: 0;
-                right: 0;
                 width: 100%;
                 height: 100%;
                 pointer-events: auto;
